examples/test/testpolicy13383.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13383
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key15: value38
      key44: value49
      key1: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value48
          key19: value12
      podSelector:
        matchLabels:
          key26: value41
          key8: value17
